# python_module08

./: .gitignore  README.md
ex0/: construct.py
ex1/: .gitignore  loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  oracle.py  requirements.txt
