[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "peladno",email = "j.perezurrutia@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
